--- a/odin/templates/default.jinja2
+++ b/odin/templates/default.jinja2
@@ -2,6 +2,6 @@
 
 {% block content %}
 <div class="content">
-  <h1><span class="font-semi-bold">404</span> <span class="smaller">Page Not Found</span></h1>
+  <h1><span class="font-semi-bold">Pyramid</span> <span class="smaller">Odin project</span></h1>
 </div>
 {% endblock content %}
